# bazel-cdk-clojure

./: BUILD  README.md  WORKSPACE  cdk.json  deps.edn  package-lock.json  package.json  tsconfig.json
.github/workflows/: .bazelrc-ci  actions.yml  main.yml  pr.yml
infra/: BUILD.bazel  app.ts  stack.ts
infra/static/: hello.json
java/lambda/: BUILD  core.clj  handler.clj
java/lambda/handler/: package-info.java
java/tools/intellij/: BUILD
javatests/lambda/: BUILD.bazel  core_test.clj  expected.edn  result.json
rules/cdk/: rules.bzl
