package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "infra",
    srcs = glob(["*.ts"]),
    data = [
        "//java/lambda:lambda_deploy.jar",
    ],
    deps = [
        "@npm//@aws-cdk/aws-apigatewayv2",
        "@npm//@aws-cdk/aws-lambda",
        "@npm//@aws-cdk/aws-s3",
        "@npm//@aws-cdk/aws-s3-deployment",
        "@npm//@aws-cdk/core",
        "@npm//@types/node",
    ],
)

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "app",
    data = [
        ":static/hello.json",
        ":infra",
    ],
    entry_point = ":app.ts",
    visibility = ["//visibility:public"],
)

load("//rules/cdk:rules.bzl", "synth")

synth(
    name = "synth",
    cdk_app = ":app",
    data = [
        # I'm not sure why this isn't transitively added from the infra ts_library above.
        # Perhaps will be fixed by: https://github.com/bazelbuild/rules_nodejs/pull/1040
        "//java/lambda:lambda_deploy.jar",
    ]
)
